fix get list